fix sideBookSection header margin on mobile

--- a/styles/sideBookSection.css
+++ b/styles/sideBookSection.css
@@ -153,6 +153,9 @@
     font-size: 16px;
     padding: 20px;
   }
+  .side-book-section-header > p {
+    margin-bottom: 20px;
+  }
 }
 
 @media (max-width: 850px) {
